Archive2/a0/0a126ba1a216eb/output
main.cpp: In function 'void f(Point)':
main.cpp:10:31:   in constexpr expansion of 'x.Point::size()'
main.cpp:10:31: error: 'x' is not a constant expression
     constexpr auto z = x.size();
                               ^
